maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:51: error: '=' expected but identifier found.
def Boolean check(x:Int,y:Int,sol:Int){
            ^ShortestPathMaze:78: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^